[project]
name = "m3u8-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.2",
    "flask>=3.1.2",
    "flask-apscheduler>=1.13.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "m3u8>=6.0.0",
    "pymysql>=1.1.2",
    "requests>=2.32.5",
]
